Fixed layout on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -7,13 +7,12 @@ body {
 
 .content {
   max-width: 600px;
+  padding: 8px;
   margin: auto;
 }
 
 .banner {
-  aspect-ratio: 4/1;
-  min-height: 100px;
-  max-height: 300px;
+  height: 300px;
 }
 
 .heading {
@@ -85,4 +84,11 @@ a {
 
 a:visited {
   color: inherit;
+}
+
+@media only screen and (max-width: 400px) {
+  .navbar {
+    flex-direction: column;
+    height: 150px;
+  }
 }
